# python-performance-poc

./: README.md  pyproject.toml
python_performance_poc/: caching.py  class.py  data_aggregation.py  dataclass.py  descriptors.py  initializing_dictionaries.py  interning_strings.py  loops.py  property_decorator.py  property_function.py
